// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Divider /> should not render <Divider /> when show is set to false 1`] = `null`;

exports[`<Divider /> should render <Divider /> with data included 1`] = `
<section
  class="sc-bdnxRM irYzVS"
  data-testid="divider"
>
  <div
    class="sc-gtsrHT jCVIbv"
  >
    <div
      class="sc-eCApnc"
    >
      <h1
        class="sc-dlnjwi vLjLf"
      >
        Some title here
      </h1>
      <h3
        class="sc-hKFxyN bHmfrS"
      >
        This is subtitle included in divider component
      </h3>
    </div>
  </div>
</section>
`;

exports[`<Divider /> should render <Divider /> with just title 1`] = `
<section
  class="sc-bdnxRM irYzVS"
  data-testid="divider"
>
  <div
    class="sc-gtsrHT jCVIbv"
  >
    <h1
      class="sc-dlnjwi vLjLf"
    >
      Some title here
    </h1>
  </div>
</section>
`;
